<resources>
  <string name="app_name">CovidHelp</string>
  <string name="hemkunt_foundation">Hemkunt Foundation has been helping out with Oxygen Cylinders. 80G donation receipts available.</string>
  <string name="act_grants">ACT grants has been helping with distribution of oxygen. Run by Indian startup ecosystem. International donations also accepted.</string>
  <string name="give_india">Give India are providing sanitary napkins for women affected by the Pandemic.</string>
  <string name="feeding_from_far">Feeding From Far has been feeding the poor and unemployed who are struggling to feed themselves during the lockdown. Accepts international payments.</string>
  <string name="swasth">Swasth along with ACT Grants is procuring oxygen concentrators and channeling them to hospitals in India.</string>
  <string name="zomato_feeding_india">Zomato Feeding India are providing hospitals and patients with oxygen and related supplies for free. Accepts international payments.</string>
  <string name="goonj">Goonj is providing essentials like ration and hygiene material, with dignity, to daily wagers, migrant workers and people struggling for the basics in the villages of India. Eligible for tax deduction of 50% u/s 80G.</string>
  <string name="enrich_lives_foundation">Enrich Lives Foundation is providing grocery kits and meals to the poor communities.</string>
  <string name="paytm_foundation">Paytm Foundation is raising ₹10 crore to donate Oxygen Concentrators across India. They will match the contributions received through this initiative.</string>
  <string name="mission_oxygen">This campaign started as a self-funded mission to help hospitals across the country get immediate access to oxygen concentrators. We assumed a requirement of 100 pieces that we could manage.</string>
  <string name="who">The World Health Organization (WHO) is leading and coordinating the global effort, supporting countries to prevent, detect, and respond to the pandemic.</string>
  <string name="wb_gov_help">This online portal is made by Government of WestBengal.</string>
  <string name="project_oxygen">A project for supplying "Oxygen Cylinder" in your home.</string>
  <string name="someannoying_help">This online portal is made by Someannoying Community.</string>
  <string name="chatbot_help">A whatsapp chat bot service from West Bengal Government.</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="covid_tracker">Covid Tracker</string>
  <string name="recover">Recover</string>
  <string name="total_death">Total Death</string>
  <string name="total_active">Total Active</string>
  <string name="_1234567">1234567</string>
  <string name="deaths">Deaths</string>
  <string name="recovered">Recovered</string>
  <string name="active">Active</string>
  <string name="Inida">India</string>
  <string name="state_json">{
  \"states\": [
  {
  \"state_id\": 1,
  "state_name": "Andaman and Nicobar Islands"
  },
  {
  "state_id": 2,
  "state_name": "Andhra Pradesh"
  },
  {
  "state_id": 3,
  "state_name": "Arunachal Pradesh"
  },
  {
  "state_id": 4,
  "state_name": "Assam"
  },
  {
  "state_id": 5,
  "state_name": "Bihar"
  },
  {
  "state_id": 6,
  "state_name": "Chandigarh"
  },
  {
  "state_id": 7,
  "state_name": "Chhattisgarh"
  },
  {
  "state_id": 8,
  "state_name": "Dadra and Nagar Haveli"
  },
  {
  "state_id": 37,
  "state_name": "Daman and Diu"
  },
  {
  "state_id": 9,
  "state_name": "Delhi"
  },
  {
  "state_id": 10,
  "state_name": "Goa"
  },
  {
  "state_id": 11,
  "state_name": "Gujarat"
  },
  {
  "state_id": 12,
  "state_name": "Haryana"
  },
  {
  "state_id": 13,
  "state_name": "Himachal Pradesh"
  },
  {
  "state_id": 14,
  "state_name": "Jammu and Kashmir"
  },
  {
  "state_id": 15,
  "state_name": "Jharkhand"
  },
  {
  "state_id": 16,
  "state_name": "Karnataka"
  },
  {
  "state_id": 17,
  "state_name": "Kerala"
  },
  {
  "state_id": 18,
  "state_name": "Ladakh"
  },
  {
  "state_id": 19,
  "state_name": "Lakshadweep"
  },
  {
  "state_id": 20,
  "state_name": "Madhya Pradesh"
  },
  {
  "state_id": 21,
  "state_name": "Maharashtra"
  },
  {
  "state_id": 22,
  "state_name": "Manipur"
  },
  {
  "state_id": 23,
  "state_name": "Meghalaya"
  },
  {
  "state_id": 24,
  "state_name": "Mizoram"
  },
  {
  "state_id": 25,
  "state_name": "Nagaland"
  },
  {
  "state_id": 26,
  "state_name": "Odisha"
  },
  {
  "state_id": 27,
  "state_name": "Puducherry"
  },
  {
  "state_id": 28,
  "state_name": "Punjab"
  },
  {
  "state_id": 29,
  "state_name": "Rajasthan"
  },
  {
  "state_id": 30,
  "state_name": "Sikkim"
  },
  {
  "state_id": 31,
  "state_name": "Tamil Nadu"
  },
  {
  "state_id": 32,
  "state_name": "Telangana"
  },
  {
  "state_id": 33,
  "state_name": "Tripura"
  },
  {
  "state_id": 34,
  "state_name": "Uttar Pradesh"
  },
  {
  "state_id": 35,
  "state_name": "Uttarakhand"
  },
  {
  "state_id": 36,
  "state_name": "West Bengal"
  }
  ],
  "ttl": 24
  }</string>
  <string name="open">Open</string>
  <string name="close">Close</string>
  <string name="need_help">Need Help?</string>
  <string name="covid_help">Covid Help</string>
  <string name="enter_city_name">Enter City Name</string>
  <string name="all">All</string>
  <string name="beds">Beds</string>
  <string name="icu">ICU</string>
  <string name="oxygen">Oxygen</string>
  <string name="ventilator">Ventilator</string>
  <string name="tests">Tests</string>
  <string name="fabiflu">Fabiflu</string>
  <string name="remdesivir">Remdesivir</string>
  <string name="favipiravir">Favipiravir</string>
  <string name="tocilizumab">Tocilizumab</string>
  <string name="plasma">Plasma</string>
  <string name="ambulance">Ambulance</string>
  <string name="other_item">Other Item</string>
  <string name="search">Search</string>
  <string name="food">Food</string>
  <string name="enter_other_item">Enter Other Item</string>
  <string name="here_you_find_everything">Here You Find Everything</string>
  <string name="state">State</string>
  <string name="district">District</string>
  <string name="filter">filter</string>
  <string name="select_date">Select Date</string>
  <string name="bed_availability">Bed Availability</string>
  <string name="safehome_availability">SafeHome Availability</string>
  <string name="admission_cell_helpdesk">Admission Cell Helpdesk</string>
  <string name="co_ordinate_center">Co-Ordinate Center</string>
  <string name="ambulance_provider">Ambulance Provider</string>
  <string name="hearse_van_availability">Hearse van Availability</string>
  <string name="nodal_officers_for_burial_and_cremation">Nodal Officers for Burial and Cremation</string>
  <string name="burial_and_cremation_related_information">Burial and Cremation Related Information</string>
  <string name="enter_your_queries_or_feedback">Enter your queries or feedback</string>
  <string name="send">Send</string>
  <string name="cancel">Cancel</string>
  <string name="enter_your_message">Enter your message</string>
  <string name="our_small_help_can_save_a_life">😇Our small help can save a life😇</string>
  <string name="donate_here">Donate Here</string>
  <string name="donate">Donate Now</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="your_name">Your Name</string>
  <string name="your_address">Your Address</string>
  <string name="about_app">-: About App :-</string>
  <string name="the_covid_help_app_is_a_treasure_of_all_types_of_covid_resources_like_bed_oxygen_plasma_blood_test_resources_medicine_doctors_information_vaccination_information_and_many_many_more">The Covid-Help app is a treasure of all types of covid-resources like bed, oxygen, plasma/blood, test resources, medicine, doctors\' information, vaccination information, and many more....</string>
  <string name="volunteers">Volunteers</string>
  <string name="version_1_0">VERSION : 1.0</string>
  <string name="view_repository">View Repository</string>
  <string name="also_our_app_is_an_open_source_project_welcome_you_all_to_contribute_in_our_app">Also Our app is an Open Source project.Welcome you all to contribute in our app.</string>
  <string name="some_verified_websites_and_portals_to_donate_for_helping_people_in_this_pandemic_situation">Some verified websites and portals to donate for helping people in this pandemic situation.</string>
  <string name="you_can_check_if_there_any_vaccination_slot_available_or_not_in_your_area_and_now_no_need_to_check_the_cowin_website_anymore_and_also_you_will_be_redirected_to_the_booking_portal_of_cowin_if_the_slot_remains_available">You can check if there any vaccination slot available or not in your area and now no need to check the COWIN website anymore and also you will be redirected to the booking portal of COWIN if the slot remains available.</string>
  <string name="here_you_will_get_verified_and_aspiring_volunteers_information_in_your_local_area_you_can_search_them_by_your_state_and_district_and_also_can_contact_them_directly_from_the_app_through_message_and_call_also_you_can_add_yourself_as_a_volunteer">Here you will get verified and aspiring volunteers\' information in your local area. You can search them by your state and district and also can contact them directly from the app through message and call. Also, you can add yourself as a volunteer.</string>
  <string name="here_you_can_track_information_about_the_latest_covid_cases_of_india_and_also_you_can_get_state_wise_information_also_you_will_be_notified_within_every_6_hours_about_the_latest_cases_in_india">Here you can track information about the latest covid cases of India and also you can get state-wise information. Also, you will be notified within every 6 hours about the latest cases in India.</string>
  <string name="vaccine_status">Vaccine Status</string>
  <string name="here_you_will_get_all_verified_information_about_covid_resources_from_some_verified_websites_also_you_can_get_advanced_twitter_help_support_to_find_relevant_resources_in_your_city">Here you will get all verified information about covid-resources from some verified websites also you can get advanced Twitter-Help support to find relevant resources in your city.</string>
  <string name="name">Name*</string>
  <string name="enter_your_name">Enter your name</string>
  <string name="phone">Phone*</string>
  <string name="enter_your_phone_no">Enter your phone no.</string>
  <string name="select_your_state">Select your state</string>
  <string name="select_your_district">Select your district</string>
  <string name="organization">Organization</string>
  <string name="a_short_description_about_your_work">A short description about your work</string>
  <string name="optional">Optional</string>
  <string name="add">+ Add</string>
  <string name="description">Description</string>
  <string name="if_any">If Any</string>
  <string name="cities">Cities</string>
  <string name="kolkata">Kolkata</string>
  <string name="delhi">Delhi</string>
  <string name="pune">Pune</string>
  <string name="mumbai">Mumbai</string>
  <string name="bangalore">Bangalore</string>
  <string name="jaipur">Jaipur</string>
  <string name="hyderbad">Hyderbad</string>
  <string name="agra">Agra</string>
  <string name="lucknow">Lucknow</string>
  <string name="ahmedabad">Ahmedabad</string>
  <string name="chennai">Chennai</string>
  <string name="goa">Goa</string>
  <string name="or">OR</string>
  <string name="search_other_cities">Search Other Cities</string>
  <string name="resources">Resources</string>
  <string name="book_vaccine">Book Vaccine</string>
  <string name="made_with">Made With ❤️</string>
  <string name="coming_soon">Coming soon…</string>
  <string name="select_your_state_and_district">Select Your State and District</string>
  <string name="wb_icms">WB-ICMS</string>
  <string name="bed_available">Bed Available :</string>
  <string name="fetching">Fetching</string>
  <string name="e_services">E-SERVICES</string>
  <string name="someannoying">Someannoying</string>
</resources>